<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.NoteActivity">

    <TextView
        android:id="@+id/textMyNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/ubuntu_bold"
        android:textSize="20sp"
        android:includeFontPadding="false"
        android:text="@string/my_notes"
        android:textColor="@color/colorWhite"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutSearch"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/background_search"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="5dp"

        app:layout_constraintTop_toBottomOf="@id/textMyNotes">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/inputSearch"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="5dp"
            android:iconifiedByDefault="true"
            android:searchIcon="@drawable/ic_search"
            android:textSize="17sp"
            android:theme="@style/ThemeOverlay.MaterialComponents"
            app:queryHint="@string/search_note"
            />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/noteRecyclerview"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:clipToPadding="false"
        android:paddingStart="0dp"
        android:paddingEnd="12dp"
        android:paddingBottom="12dp"
        app:layout_constraintBottom_toTopOf="@id/layoutQuickAction"
        app:layout_constraintTop_toBottomOf="@id/layoutSearch"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutQuickAction"
        android:background="@color/colorQuickActionBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/imageAddNote"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_add_outline"
            android:tint="@color/colorIcons"
            android:layout_marginRight="7dp"
            tools:ignore="UseAppTint" />


        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/imageAddImage"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_image"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:tint="@color/colorIcons"
            tools:ignore="UseAppTint" />


    </LinearLayout>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/imageAddNoteMain"
        android:layout_marginEnd="30dp"
        android:background="@drawable/background_add_botton"
        android:contentDescription="@string/app_name"
        android:padding="5dp"
        android:src="@drawable/ic_add"
        android:tint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@id/layoutQuickAction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/layoutQuickAction"
        tools:ignore="UseAppTint" />


</androidx.constraintlayout.widget.ConstraintLayout>